--- a/dashboard/src/css/style.css
+++ b/dashboard/src/css/style.css
@@ -215,3 +215,20 @@ span.flatpickr-weekday,
 [x-cloak] {
   display: none !important;
 }
+
+.dark .MuiInputBase-colorPrimary {
+  color: white;
+}
+
+.dark .MuiIconButton-sizeMedium {
+  color: white;
+}
+
+.dark .css-o9k5xi-MuiInputBase-root-MuiOutlinedInput-root.Mui-focused .MuiOutlinedInput-notchedOutline {
+  border-color: #3C50E0;
+  border-width: 1px;
+}
+
+.dark .css-13cymwt-control {
+  background-color: #1d2a39;
+}
